--- a/sport/app/views/fragments/cricketMiniScorecard.scala.html
+++ b/sport/app/views/fragments/cricketMiniScorecard.scala.html
@@ -72,17 +72,12 @@
                         <td>Last Out:
                         </td>
                         <td>
-                            @batsman.name @batsman.runs @batsman.howOut
+                            @batsman.name @batsman.runs
                         </td>
                     </tr> }
                 case _ => {}
                 }
             </tbody>
         </table>
-
-
-
-
-
     </div>
 </div>
