--- a/common/app/assets/stylesheets/module/sport/_mini-scorecard.scss
+++ b/common/app/assets/stylesheets/module/sport/_mini-scorecard.scss
@@ -16,7 +16,7 @@
     font-weight: 500;
     margin-top: $baseline*2;
     margin-bottom: 0;
-    padding: 9px $baseline*2;
+    padding: 11px $baseline*2 $baseline*2;
 }
 
 .sport-miniscorecard__body {
@@ -58,6 +58,6 @@
     }
 
     tr:last-child {
-        border-bottom: 0px;
+        border-bottom: 0;
     }
 }
