--- a/admin/app/views/admin_main.scala.html
+++ b/admin/app/views/admin_main.scala.html
@@ -52,7 +52,7 @@
     <div class="navbar">
         <div class="navbar-inner">
             <div id="environment">
-                <span class="label label-warning">Environment: @env</span>
+                <span class="label label-warning">Environment: @env.toLowerCase</span>
             </div>
             @if(isAuthed){
                 <ul class="nav pull-right">
