--- a/admin/app/views/fronts.scala.html
+++ b/admin/app/views/fronts.scala.html
@@ -4,7 +4,7 @@
 
     <div class="fronts">
         <div class="list-picker">
-            <div class="list-picker__title">Trail Blocks</div>
+            <span class="list-picker__title">Select a trailblock:</span>
 
             <select data-bind="options: editions, optionsText: 'id', value: $root.selectedEdition, optionsCaption: 'Edition...'"></select>
 
