--- a/football/app/views/fragments/matchSummary.scala.html
+++ b/football/app/views/fragments/matchSummary.scala.html
@@ -8,9 +8,14 @@
 @defining((theMatch.homeTeam, theMatch.awayTeam)){ case (homeTeam, awayTeam) =>
   @if(theMatch.isLive || theMatch.isResult){
     <h2 class="type-3">@homeTeam.name @homeTeam.score</h2>
-    <p class="home-scorers type-11">@cleanScorers(homeTeam.scorers)</p>
+    @if(homeTeam.hasScored){
+        <p class="home-scorers type-11">@cleanScorers(homeTeam.scorers)</p>
+    }
     <h2 class="away-team type-3">@awayTeam.name @awayTeam.score</h2>
-    <p class="type-11">@cleanScorers(awayTeam.scorers)</p>
+
+    @if(awayTeam.hasScored){
+        <p class="type-11">@cleanScorers(awayTeam.scorers)</p>
+    }
   } else {
     <h2 class="type-3">@homeTeam.name v @awayTeam.name</h2>
   }
