--- a/common/app/views/fragments/trails/thumbnail.scala.html
+++ b/common/app/views/fragments/trails/thumbnail.scala.html
@@ -1,6 +1,8 @@
 @(trail: Trail, rowNum: Int, related: Boolean = false, showThumbnail: Boolean = true, element: String = "li", headingLevel: Int = 2)(implicit request: RequestHeader)
 
-<@element class="trail trail--thumbnail t@rowNum" data-link-name="trail" @trail.discussionId.map{ id => data-discussion-id="@id" }>
+<@element class="trail trail--thumbnail t@rowNum" data-link-name="trail"
+    @trail.discussionId.map{ id => data-discussion-id="@id" }
+    @CricketMatch(trail).map{ id => data-cricket-match="@id" } >
 
     @fragments.relativeDate(trail.webPublicationDate, trail.isLive, isFront=true)
 
