--- a/admin/app/views/fronts.scala.html
+++ b/admin/app/views/fronts.scala.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="list-header__meta">
                         <!-- ko if: lastUpdated -->
-                            Updated <span class="list-header__meta__last-updated" data-bind="text: lastUpdated"></span> 
+                            updated <span class="list-header__meta__last-updated" data-bind="text: lastUpdated"></span> 
                             by <a class="list-header__meta__user" data-bind="
                                 text: updatedBy,
                                 attr: {href: 'mailto:' + updatedEmail}
