--- a/common/app/assets/stylesheets/_extends-only.scss
+++ b/common/app/assets/stylesheets/_extends-only.scss
@@ -8,11 +8,11 @@
 %type-2 { @include font($serifheadline, 600, 18, 28); }
 
 //SerifText
-%type-3 { @include font($serif, 500, 20, 28) }
-%type-4 { @include font($serif, 500, 18, 24) }
-%type-5 { @include font($serif, 500, 16, 22) }
-%type-6 { @include font($serif, normal, 16, 24) }
-%type-7 { @include font($serif, normal, 14, 20) }
+%type-3 { @include font($serif, 500, 20, 28); }
+%type-4 { @include font($serif, 500, 18, 24); }
+%type-5 { @include font($serif, 500, 16, 22); }
+%type-6 { @include font($serif, normal, 16, 24); }
+%type-7 { @include font($serif, normal, 14, 20); }
 
 //Sans-serif's
 %type-8  { @include font($sans-serif, normal, 14, 20); }
