--- a/common/app/assets/stylesheets/module/_live-blog.scss
+++ b/common/app/assets/stylesheets/module/_live-blog.scss
@@ -116,7 +116,7 @@
 
     .tweet-user {
         display: inline-block;
-        font-weight: 500 !important;
+        font-weight: 500;
         padding-left: 40px;
         margin-bottom: 0;
     }
