--- a/common/app/assets/stylesheets/global.scss
+++ b/common/app/assets/stylesheets/global.scss
@@ -36,6 +36,7 @@
 @import "module/football/_matches";
 @import "module/sport/_summary";
 @import "module/sport/_mini-scorecard";
+@import "module/sport/_full-scorecard";
 @import "module/_discussion";
 @import "module/_interactive";
 @import "module/_overlay";
