--- a/admin/public/css/style.css
+++ b/admin/public/css/style.css
@@ -533,8 +533,7 @@ a.cta, .cta a {
 }
 
 .fronts .lists .connectedList {
-    min-height:50px;
-    background-color: rgb(223, 240, 216);
+    background-color: #a1aec4;
     margin: 0 0 20px 0;
 }
 
